--- a/#src/scss/_cards.scss
+++ b/#src/scss/_cards.scss
@@ -1,6 +1,6 @@
 .cards {
     background-color: $bg;
-    padding: 195px 0 0 0;
+    padding: 195px 0 ;
 
     &_body {
     }
@@ -30,7 +30,7 @@
     }
 
     &_item {
-        max-width: 392px;
+        max-width: 394px;
         display: block;
         cursor: pointer;
         margin: 0 0 100px 0;
@@ -45,6 +45,7 @@
     
     &_item-body{
         padding: 30px;
+        opacity: 0.7;
     }
 
     &_item-title {
@@ -59,14 +60,15 @@
     }
 
     &_title-name {
-        font-size: $secondFF;
+        font-size: $secondFontSize;
         color: $secondColor;
         line-height: 130%;
         margin: 0 0 8px 0;
     }
 
     &_title-condition {
-        color: rgba(255, 165, 55, 0.55);
+        color: #FFA537;
+        font-size: 18px;
     }
 
     &_item-text {
@@ -78,20 +80,170 @@
     &_item-btns {
         display: flex;
         justify-content: space-between;
+        align-items: center;
     }
 
     &_item-icons {
+        display: flex;
         .icon{
+            display: block;
             width: 25px;
             height: 21px;
+            color: $mainColor;
+            margin: 0 15px 0 0 ;
+            transition: all 0.4s ease 0s;
         }
     }
 
     &_item-button{
         display: inline-block;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        height: 42px;
+        padding: 0 35px;
+        background: none;
+        color: $mainColor;
+        font-size: 16px;
+        line-height: 150%;
+        font-weight: 600;
+        border-radius: 10px;
 
     }
+
+    &_button-body{
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        margin: 0 auto;
+    }
+
+    &_button{
+        background-color: transparent;
+        border: 1px solid #9a9da055;
+        color: $bg2;
+        box-shadow: 0px 5px 10px 2px #9a9da00e inset;
+        transition: all 0.4s ease 0s;
+    }
+
+    &_button:hover{
+        background-color: $bg2;
+        color: $secondColor;
+    }
 }
+
+
+.icon_like.active {
+    color: #FD3B41;
+    -webkit-animation: bounce-in-top 1.1s both;
+	animation: bounce-in-top 1.1s both;
+
+}
+@-webkit-keyframes bounce-in-top {
+    0% {
+      -webkit-transform: translateY(-250px);
+              transform: translateY(-250px);
+      -webkit-animation-timing-function: ease-in;
+              animation-timing-function: ease-in;
+      opacity: 0;
+    }
+    38% {
+      -webkit-transform: translateY(0);
+              transform: translateY(0);
+      -webkit-animation-timing-function: ease-out;
+              animation-timing-function: ease-out;
+      opacity: 1;
+    }
+    55% {
+      -webkit-transform: translateY(-65px);
+              transform: translateY(-65px);
+      -webkit-animation-timing-function: ease-in;
+              animation-timing-function: ease-in;
+    }
+    72% {
+      -webkit-transform: translateY(0);
+              transform: translateY(0);
+      -webkit-animation-timing-function: ease-out;
+              animation-timing-function: ease-out;
+    }
+    81% {
+      -webkit-transform: translateY(-28px);
+              transform: translateY(-28px);
+      -webkit-animation-timing-function: ease-in;
+              animation-timing-function: ease-in;
+    }
+    90% {
+      -webkit-transform: translateY(0);
+              transform: translateY(0);
+      -webkit-animation-timing-function: ease-out;
+              animation-timing-function: ease-out;
+    }
+    95% {
+      -webkit-transform: translateY(-8px);
+              transform: translateY(-8px);
+      -webkit-animation-timing-function: ease-in;
+              animation-timing-function: ease-in;
+    }
+    100% {
+      -webkit-transform: translateY(0);
+              transform: translateY(0);
+      -webkit-animation-timing-function: ease-out;
+              animation-timing-function: ease-out;
+    }
+  }
+  @keyframes bounce-in-top {
+    0% {
+      -webkit-transform: translateY(-250px);
+              transform: translateY(-250px);
+      -webkit-animation-timing-function: ease-in;
+              animation-timing-function: ease-in;
+      opacity: 0;
+    }
+    38% {
+      -webkit-transform: translateY(0);
+              transform: translateY(0);
+      -webkit-animation-timing-function: ease-out;
+              animation-timing-function: ease-out;
+      opacity: 1;
+    }
+    55% {
+      -webkit-transform: translateY(-65px);
+              transform: translateY(-65px);
+      -webkit-animation-timing-function: ease-in;
+              animation-timing-function: ease-in;
+    }
+    72% {
+      -webkit-transform: translateY(0);
+              transform: translateY(0);
+      -webkit-animation-timing-function: ease-out;
+              animation-timing-function: ease-out;
+    }
+    81% {
+      -webkit-transform: translateY(-28px);
+              transform: translateY(-28px);
+      -webkit-animation-timing-function: ease-in;
+              animation-timing-function: ease-in;
+    }
+    90% {
+      -webkit-transform: translateY(0);
+              transform: translateY(0);
+      -webkit-animation-timing-function: ease-out;
+              animation-timing-function: ease-out;
+    }
+    95% {
+      -webkit-transform: translateY(-8px);
+              transform: translateY(-8px);
+      -webkit-animation-timing-function: ease-in;
+              animation-timing-function: ease-in;
+    }
+    100% {
+      -webkit-transform: translateY(0);
+              transform: translateY(0);
+      -webkit-animation-timing-function: ease-out;
+              animation-timing-function: ease-out;
+    }
+  }
+  
 
 .title {
     font-size: 48px;
@@ -103,7 +255,137 @@
     background: linear-gradient(45deg, rgb(36, 44, 49) 49%, rgb(91, 62, 51) 100%);
     border-top: 2px solid #5b3e33;
     border-radius: 20px;
+    opacity: 1;
+    -webkit-filter:saturate(150%);
+    filter: saturate(150%);
+    -webkit-animation: puff-in-center 0.4s cubic-bezier(0.470, 0.000, 0.745, 0.715) both;
+	animation: puff-in-center 0.4s cubic-bezier(0.470, 0.000, 0.745, 0.715) both;
+}
+@-webkit-keyframes puff-in-center {
+    0% {
+      -webkit-transform: scale(2);
+              transform: scale(2);
+      -webkit-filter: blur(4px);
+              filter: blur(4px);
+      opacity: 0;
+    }
+    100% {
+      -webkit-transform: scale(1);
+              transform: scale(1);
+      -webkit-filter: blur(0px);
+              filter: blur(0px);
+      opacity: 1;
+    }
+  }
+  @keyframes puff-in-center {
+    0% {
+      -webkit-transform: scale(2);
+              transform: scale(2);
+      -webkit-filter: blur(4px);
+              filter: blur(4px);
+      opacity: 0;
+    }
+    100% {
+      -webkit-transform: scale(1);
+              transform: scale(1);
+      -webkit-filter: blur(0px);
+              filter: blur(0px);
+      opacity: 1;
+    }
+  }
 
+.cards_item-radio:checked + .cards_item-body{
+    .cards_item-button{
+        background-color: $bg2;
+        box-shadow: 0px 5px 3px 2px $bg;
+        -webkit-animation: vibrate-1 0.8s linear infinite both;
+	    animation: vibrate-1 0.8s linear infinite both;
+        color: $secondColor;
+        transition: 0.5s ease-in-out 0s;
+    }
 }
 
+@-webkit-keyframes vibrate-1 {
+    0% {
+      -webkit-transform: translate(0);
+              transform: translate(0);
+    }
+    20% {
+      -webkit-transform: translate(-2px, 2px);
+              transform: translate(-2px, 2px);
+    }
+    40% {
+      -webkit-transform: translate(-2px, -2px);
+              transform: translate(-2px, -2px);
+    }
+    60% {
+      -webkit-transform: translate(2px, 2px);
+              transform: translate(2px, 2px);
+    }
+    80% {
+      -webkit-transform: translate(2px, -2px);
+              transform: translate(2px, -2px);
+    }
+    100% {
+      -webkit-transform: translate(0);
+              transform: translate(0);
+    }
+  }
+  @keyframes vibrate-1 {
+    0% {
+      -webkit-transform: translate(0);
+              transform: translate(0);
+    }
+    20% {
+      -webkit-transform: translate(-2px, 2px);
+              transform: translate(-2px, 2px);
+    }
+    40% {
+      -webkit-transform: translate(-2px, -2px);
+              transform: translate(-2px, -2px);
+    }
+    60% {
+      -webkit-transform: translate(2px, 2px);
+              transform: translate(2px, 2px);
+    }
+    80% {
+      -webkit-transform: translate(2px, -2px);
+              transform: translate(2px, -2px);
+    }
+    100% {
+      -webkit-transform: translate(0);
+              transform: translate(0);
+    }
+  }
+  
 
+  //!!ADAPTIVE
+  @media(max-width:1210px){
+      .cards_item{
+          max-width: 350px;
+      }
+  }
+
+  @media(max-width:1080px) {
+      .cards_item{
+          max-width: 300px;
+      }
+  }
+
+  @media(max-width:930px){
+      .cards_item{
+          max-width: 395px;
+      }
+  }
+  @media(max-width:820px){
+    .cards_item{
+        max-width: 100%;
+        margin: 0 0 50px 0;
+    }
+    .cards_cards{
+        flex-direction: column;
+    }
+    .cards{
+        padding: 70px 0;
+    }
+}
