--- a/#src/scss/_brands.scss
+++ b/#src/scss/_brands.scss
@@ -64,11 +64,12 @@
         height: 3px;
         background: linear-gradient(45deg, rgb(33, 40, 47), rgb(163, 81, 49) 100%);
         transform-origin: left;
-        transition: all 0.4s ease-in-out 0.5s;
+
     }
     &_links:hover{
         -webkit-animation: pulsate-fwd 0.7s ease-in-out infinite both;
 	        animation: pulsate-fwd 0.7s ease-in-out infinite both;
+            
 
     }
 
@@ -109,5 +110,8 @@
           width: auto;
           flex-direction: column;
           align-items: flex-start;
+          li{
+              margin: 0 0 20px 0;
+          }
       }
   }
