--- a/#src/scss/style.scss
+++ b/#src/scss/style.scss
@@ -28,6 +28,8 @@
 @import "_cards";
 @import "_brands";
 @import "_newcomer";
+@import "_slider";
+@import "_contributor";
 @import "_footer";
 
 body{
