--- a/#src/scss/_newcomer.scss
+++ b/#src/scss/_newcomer.scss
@@ -1,6 +1,6 @@
 .newcomer {
 	background-color: $bg;
-	padding: 200px 0;
+	padding: 200px 0 0 0;
 
 		&_body {
 		}
@@ -58,7 +58,7 @@
 }
 @media(max-width:1000px){
 	.newcomer{
-		padding: 50px 0;
+		padding: 50px 0 0 0;
 	}
 	.newcomer_row{
 		flex-direction: column;
