--- a/#src/scss/_cards.scss
+++ b/#src/scss/_cards.scss
@@ -120,18 +120,29 @@
 
     &_button{
         background-color: transparent;
+        height: 48px;
+        padding: 0 30px;
+        border-radius: 9px;
         border: 1px solid #9a9da055;
         color: $bg2;
+        font-size: 16px;
+        font-weight: 600;
+        line-height: 150%;
         box-shadow: 0px 5px 10px 2px #9a9da00e inset;
-        transition: all 0.4s ease 0s;
     }
 
     &_button:hover{
-        background-color: $bg2;
+        background: -webkit-linear-gradient(180deg, rgb(255, 110, 48) 55%, rgb(124, 38, 2) 100%);
+        background: -moz-linear-gradient(180deg, rgb(255, 110, 48) 55%, rgb(124, 38, 2) 100%);
+        background: linear-gradient(180deg, rgb(255, 110, 48) 55%, rgb(124, 38, 2) 100%);
+        box-shadow:0 1px rgba(255,255,255,.2) inset,0 3px 5px rgba(0,1,6,.5),0 0 1px 1px rgba(0,1,6,.2);
         color: $secondColor;
     }
 }
 
+.icon_download:hover{
+        color: #FFA537;
+}
 
 .icon_like.active {
     color: #FD3B41;
@@ -296,12 +307,20 @@
 
 .cards_item-radio:checked + .cards_item-body{
     .cards_item-button{
-        background-color: $bg2;
-        box-shadow: 0px 5px 3px 2px $bg;
         -webkit-animation: vibrate-1 0.8s linear infinite both;
-	    animation: vibrate-1 0.8s linear infinite both;
+	animation: vibrate-1 0.8s linear infinite both;
         color: $secondColor;
-        transition: 0.5s ease-in-out 0s;
+        text-shadow: 0 -1px 2px rgba(0,0,0,.2);
+        outline: none;
+        background: -webkit-linear-gradient(180deg, rgb(255, 110, 48) 55%, rgb(124, 38, 2) 100%);
+        background: -moz-linear-gradient(180deg, rgb(255, 110, 48) 55%, rgb(124, 38, 2) 100%);
+        background: linear-gradient(180deg, rgb(255, 110, 48) 55%, rgb(124, 38, 2) 100%);
+        box-shadow:0 1px rgba(255,255,255,.2) inset,0 3px 5px rgba(0,1,6,.5),0 0 1px 1px rgba(0,1,6,.2);;
+    }
+    .cards_item-button:hover{
+        background: -webkit-linear-gradient(0deg, rgb(255, 110, 48), rgb(116, 44, 13) 100%);
+        background: -moz-linear-gradient(0deg, rgb(255, 110, 48), rgb(116, 44, 13) 100%);
+        background: linear-gradient(0deg, rgb(255, 110, 48), rgb(116, 44, 13) 100%);
     }
 }
 
