--- a/#src/scss/_header.scss
+++ b/#src/scss/_header.scss
@@ -58,11 +58,16 @@
             line-height: 150%;
             font-weight: 600;
             margin: 0 40px 0 0;
+            transition: all 0.4s ease 0s;
+        }
+        a:hover{
+            color: $bg2;
         }
     }
-
-    &_account-btn:hover {
-        animation: bounce 0.8s;
+    &_account-btn{
+        display: flex;
+        justify-content: center;
+        align-items: center;
     }
 }
 
@@ -78,7 +83,14 @@
         li:last-child{
             margin: 0;
         }
-        
+
+        li:hover::after{
+            transform: scale(1);
+        }
+        li:hover::before{
+            transform: scale(1);
+        }
+
         a{
             color: $mainColor;
             font-size: 16px;
@@ -98,6 +110,7 @@
             line-height: 150%;
             transition: all 0.4s ease 0s;
         }
+
         span:hover{
             color: $bg2;
         }
@@ -116,14 +129,53 @@
         display: inline-flex;
         align-items: center;
     }
+    &_link::after,
+    &_link::before{
+            content: "";
+            position: absolute;
+            bottom: 0;
+            right: 0;
+            width: 100%;
+            height: 2px;
+            background: -webkit-linear-gradient(225deg, rgb(30, 37, 43) 11%, rgb(255, 110, 48) 100%);
+            background: -moz-linear-gradient(225deg, rgb(30, 37, 43) 11%, rgb(255, 110, 48) 100%);
+            background: linear-gradient(225deg, rgb(30, 37, 43) 11%, rgb(255, 110, 48) 100%);
+            transform-origin: left;
+            transform: scale(0);
+            transition: all 0.4s ease 0s;
+    }
+    &_link::before{
+            top: 0;
+            right: 0;
+            transform: scale(0);
+            transform-origin: right;
+    }
+    &_link:hover::before{
+        transform: scale(1);
+    }
+    &_link:hover::after{
+        transform: scale(1);
+    }
+
 }
 .submenu {
 
     &_list {
         position: absolute;
-        top: 20px;
-        padding: 20px 0 0 0;
-        min-width: 250px;
+        top: 30px;
+        left: -40%;
+        padding: 20px 15px ;
+        min-width: 200px;
+        border-radius: 20px;
+        border-bottom: 1px solid rgba(255, 255, 255, 0.111);
+        border-left: 1px solid rgba(255, 255, 255, 0.111);
+        backdrop-filter: blur(5px);
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+       
+
         li{
             margin: 0 0 10px 0;
         }
@@ -134,35 +186,32 @@
     }
 
     &_link {
+       
     }
 }
 .button {
-    background-color: $bg2;
     color: $secondColor;
+    text-shadow: 0 -1px 2px rgba(0,0,0,.2);
+    outline: none;
+    background: -webkit-linear-gradient(180deg, rgb(255, 110, 48) 55%, rgb(124, 38, 2) 100%);
+    background: -moz-linear-gradient(180deg, rgb(255, 110, 48) 55%, rgb(124, 38, 2) 100%);
+    background: linear-gradient(180deg, rgb(255, 110, 48) 55%, rgb(124, 38, 2) 100%);
+    box-shadow:0 1px rgba(255,255,255,.2) inset,0 3px 5px rgba(0,1,6,.5),0 0 1px 1px rgba(0,1,6,.2);
     font-size: 16px;
     font-weight: 600;
     line-height: 150%;
     border-radius: 9px;
     padding: 0 30px;
     height: 48px;
-
 }
-@keyframes bounce {
-	0%, 20%, 60%, 100% {
-		transform: translateY(0);
-		transform: translateY(0);
-	}
 
-	40% {
-		transform: translateY(-15px);
-		transform: translateY(-15px);
-	}
-
-	80% {
-		transform: translateY(-8px);
-		transform: translateY(-8px);
-	}
+.button:hover{
+    background: -webkit-linear-gradient(0deg, rgb(255, 110, 48), rgb(116, 44, 13) 100%);
+background: -moz-linear-gradient(0deg, rgb(255, 110, 48), rgb(116, 44, 13) 100%);
+background: linear-gradient(0deg, rgb(255, 110, 48), rgb(116, 44, 13) 100%);
+    
 }
+
 
 
 
@@ -172,6 +221,7 @@
         transform: rotate(180deg);
     }
 }
+
 .submenu_list.active {
     opacity: 1;
     visibility: visible;
