--- a/#src/scss/_slider.scss
+++ b/#src/scss/_slider.scss
@@ -92,6 +92,12 @@
         
     }
 }
+@media(max-width:767px){
+    .slaider{
+        padding-bottom: 70px;
+    }
+
+}
 
 @media(max-width:660px){
     .swiper-slide{
