--- a/#src/scss/_brands.scss
+++ b/#src/scss/_brands.scss
@@ -22,6 +22,7 @@
         font-size: $secondFontSize;
         line-height: 150%;
         margin: 0 0 50px 0;
+        text-align: center;
     }
 
     &_brands {
