--- a/#src/scss/_header.scss
+++ b/#src/scss/_header.scss
@@ -267,14 +267,14 @@ background: linear-gradient(0deg, rgb(255, 110, 48), rgb(116, 44, 13) 100%);
         height: 3px; 
         width: 40px;
         position: absolute; 
-        top: 50%;
+        top: 45%;
         right: 0;
         background: $mainColor;
         transition: all 0.3s ease-out 0s;
         z-index: 5;
     }
     &_icon::after{
-        top: 10px;
+        top:6px;
     }
     &_icon::before{
         top: 30px;
@@ -285,10 +285,12 @@ background: linear-gradient(0deg, rgb(255, 110, 48), rgb(116, 44, 13) 100%);
     &_icon.active::before{
         top: 50%;
         transform: rotate(45deg);
+        background-color: $bg2;
     }
     &_icon.active::after{
         top: 50%;
         transform: rotate(-45deg);
+        background-color: $bg2;
     }
 
     &_body {
@@ -325,6 +327,10 @@ background: linear-gradient(0deg, rgb(255, 110, 48), rgb(116, 44, 13) 100%);
     &_link {
     }
 }
+.submenu_list{
+    border: none;
+    border-radius: 0;
+}
 
 .header_logo{
     order: 2;
@@ -343,6 +349,7 @@ background: linear-gradient(0deg, rgb(255, 110, 48), rgb(116, 44, 13) 100%);
         position: relative;
         left: 0;
         top: 0;
+        backdrop-filter: none;
     }
     &_list.active{
         display: block;
@@ -365,5 +372,11 @@ background: linear-gradient(0deg, rgb(255, 110, 48), rgb(116, 44, 13) 100%);
         font-size: 14px;
         height:40px;
         padding: 0 15px;
+    }
+    .header_logo-link{
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
     }
 }
