--- a/#src/scss/_popup.scss
+++ b/#src/scss/_popup.scss
@@ -24,14 +24,14 @@
 
     &_content {
         position: relative;
-        min-width: 600px;
+        min-width: 30%;
         display: flex;
         flex-direction: column;
         align-items: center;
         justify-content: center;
         background-color: rgba(255, 255, 255, 0.089);
         border-radius: 25px;
-        padding: 50px 0;
+        padding: 50px 10px;
         border-top: 2px solid rgba(255, 255, 255, 0.342);
     }
 
@@ -57,10 +57,11 @@
         font-size: $secondFontSize;
         color: $secondColor;
         margin: 0 0 50px 0;
+        text-align: center;
     }
 
     &_form {
-        width: 350px;
+        min-width: 70%;
     }
 }
 
@@ -72,6 +73,7 @@
 .close-popup {
 }
 .form {
+    display: flex;
 
     &_items {
         display: flex;
@@ -79,7 +81,9 @@
     }
 
     &_input {
+        display: inline-block;
         margin: 0 0 30px 0;
+        max-width: 100%;
         padding: 7px 10px;
         border-radius: 8px;
         background-color: rgba(255, 255, 255, 0.089);
@@ -88,12 +92,12 @@
 
     &_buttons {
         display: flex;
-        justify-content: space-around;
+        justify-content: space-between;
     }
 
     &_button {
         height: 40px;
-        width: 100px;
+        min-width: 100px;
         text-shadow: 0 -1px 2px rgba(0,0,0,.2);
         outline: none;
         border-radius: 9px;
@@ -104,3 +108,15 @@
     }
 }
 
+@media(max-width:440px){
+    .popup_form{
+        min-width: 80%;
+    }
+    .form_button{
+        padding: 10px 25px;
+        min-width: auto;
+        font-size: $mainFontSize;
+    }
+
+
+}
